# Kiara-Stripe-Analytics

./: README.md
backend/: pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: MRRChart.tsx  MetricCard.tsx
frontend/src/services/: api.ts
frontend/src/types/: analytics.ts
