[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Devin AI", email = "devin-ai-integration@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "psycopg[binary]>=3.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
